Fix confirm string

--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -297,7 +297,7 @@
                                                             class="trans_200 fa product_text"
                                                             style="font-size: 25px; color: #4a4a4a"
                                                             data-toggle="collapse"
-                                                            onclick="confirmClick();">
+                                                            onclick="confirmClick('Are you sure you want to delete?');">
                                                         &#xf014;
                                                     </button>
                                                 </div>
