Rename myTab to siteTab in admin-panel.html and select.js

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -248,7 +248,7 @@
 
         <section class="product_description_area">
             <div class="container">
-                <ul class="nav nav-tabs justify-content-center" id="myTab">
+                <ul class="nav nav-tabs justify-content-center" id="siteTab">
                     <li class="nav-item">
                         <a class="nav-link active profile-navbar-text" data-url="/admin-panel/user"
                            href="#user">Users</a>
