Fix first tab loading on select.js

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -412,7 +412,10 @@
 <script src="js/checkbox-dropdown.js"></script>
 <script src="js/bootstrap-multiselect.js"></script>
 <script src="js/select.js"></script>
-
+<script>
+    $('#user').load($('.nav-link.active').attr("data-url"), function (result) {
+    });
+</script>
 </body>
 
 </html>
