--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -254,11 +254,13 @@
             <div class="container">
                 <ul class="nav nav-tabs justify-content-center" id="siteTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active profile-navbar-text" data-url="/product-details/information" href="#information">Information</a>
+                        <a class="nav-link active profile-navbar-text" data-url="/product-details/information"
+                           href="#information">Information</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" data-url="/product-details/photos" href="#photos">Photos</a>
+                        <a class="nav-link profile-navbar-text" data-url="/product-details/photos"
+                           href="#photos">Photos</a>
                     </li>
                 </ul>
                 <br>
