thymeleaf properties added to html.

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Register | Book Your Shelf</title>
@@ -234,31 +235,34 @@
 
                             <div class="login_title">Register</div>
                             <div class="login_form_container">
-                                <form action="#" id="login_form" class="login_form">
+                                <form action= "#" th:action="@{register}" th:object= "${newUser}" method="post" id="login_form" class="login_form" >
                                     <div>
                                         <!-- Name -->
                                         <div class="login-text p-b-10" style="color: black;">Name</div>
-                                        <input type="email" id="register_name" class="login_input form-control"
-                                               required="required">
+                                        <input type="text" th:field= "*{name}" id="register_name" class="login_input form-control">
+                                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color:red;"></span>
                                     </div>
+
                                     <div>
                                         <!-- Surname -->
                                         <div class="login-text p-b-10" style="color: black;">Surname</div>
-                                        <input type="email" id="register_surname" class="login_input form-control"
-                                               required="required">
+                                        <input type="text" th:field= "*{surname}"  id="register_surname" class="login_input form-control">
+                                        <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" style="color:red;"></span>
                                     </div>
+
                                     <div>
                                         <!-- Email -->
                                         <div class="login-text p-b-10" style="color: black;">E-Mail Address</div>
-                                        <input type="email" id="register_email" class="login_input form-control"
-                                               required="required">
+                                        <input type="text" th:field= "*{email}" id="register_email" class="login_input form-control">
+                                        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red;"></span>
                                     </div>
                                     <div>
                                         <!-- Password -->
                                         <div class="login-text p-b-10" style="color: black;">Password</div>
+                                        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"style="color:red;"></span>
                                         <div class="input-group">
-                                            <input type="password" id="register_password"
-                                                   class="login_input form-control pwd" required="required">
+                                            <input type="text" th:field= "*{password}" id="register_password"
+                                                   class="login_input form-control pwd" >
                                             <div class="input-group-append">
                                                 <span class="input-group-text show_password_bg">
                                                     <button class="btn btn-default reveal" type="button"><i
@@ -276,12 +280,12 @@
                                                 <div>
                                                     <label>
                                                         <label class="checkbox_container">
-                                                            <input type="checkbox" id="permission_agreement"
-                                                                   name="permission_agreement" class="billing_checkbox">
+                                                            <input type="checkbox"  id="permission_agreement"
+                                                                   name="permission_agreement" class="billing_checkbox" required/>
                                                             <span class="checkbox_mark"></span>
                                                         </label>
                                                         <label style="padding-left: 29px; cursor: text">
-                                                            <span class="checkbox_text login-text">I have permission to send commercial electronic messages
+                                                            <span class="checkbox_text  login-text">I have permission to send commercial electronic messages
                                                             to Oak Book Store Marketing Inc. to those mentioned
                                                             <a href="privacy_policy.html" target="_blank"
                                                                class="login-text register-text"> here</a>.</span>
@@ -289,8 +293,8 @@
                                                     </label>
                                                     <label>
                                                         <label class="checkbox_container">
-                                                            <input type="checkbox" id="membership_agreement"
-                                                                   name="membership_agreement" class="billing_checkbox">
+                                                            <input type="checkbox"  id="membership_agreement"
+                                                                   name="membership_agreement" class="billing_checkbox" required/>
                                                             <span class="checkbox_mark"></span>
                                                         </label>
                                                         <label style="padding-left: 29px; cursor: text">
@@ -298,13 +302,14 @@
                                                             <a href="membership.html" target="_blank"
                                                                class="login-text register-text"> Membership Agreement</a>.</span>
                                                         </label>
+
                                                     </label>
                                                 </div>
                                             </li>
                                         </ul>
                                     </div>
                                     <div><!--ERROR--></div>
-                                    <div class="login_button trans_200"><a href="index.html">register</a></div>
+                                    <input type="submit" value="REGISTER" class="login_button trans_200">
                                     <div class="text-center login-text">Already have an account? <a href="login.html"
                                                                                                     class="login-text register-text">Login</a>
                                     </div>
@@ -398,6 +403,7 @@
 <script src="js/custom.js"></script>
 <script src="js/active.js"></script>
 <script src="js/login.js"></script>
+
 
 </body>
 
