--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -1082,7 +1082,7 @@ section {
     transition: all 200ms ease;
 }
 
-.login_button a {
+.login_button[type=submit] {
     display: block;
     font-size: 18px;
     font-weight: 700;
@@ -1100,7 +1100,7 @@ section {
     background: transparent;
 }
 
-.login_button:hover a {
+.login_button:hover[type=submit] {
     color: #fbaa1d;
 }
 
