Add category enum locale changes

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -416,6 +416,8 @@
     $('#user').load($('.nav-link.active').attr("data-url"), function (result) {
     });
 </script>
+
+<a th:href="@{/(lang=en)}">EN</a>
 </body>
 
 </html>
