Object names were changed in controllers and button css was fixed

--- a/src/main/resources/templates/user_details/_message.html
+++ b/src/main/resources/templates/user_details/_message.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<form action="/user-details/message" th:object="${personalmessage}" class="form-contact form-review mt-3"
+<form action="/user-details/message" th:object="${PersonalMessage}" class="form-contact form-review mt-3"
       method="post">
     <div class="form-group">
         <input class="form-control" name="subject" type="text"
