--- a/src/main/resources/templates/admin_panel/_message.html
+++ b/src/main/resources/templates/admin_panel/_message.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<form action="/admin-panel/message" th:object="${adminmessage}" class="form-contact form-review mt-3"
+<form action="/admin-panel/message" th:object="${AdminMessage}" class="form-contact form-review mt-3"
       method="post">
     <div class="form-group">
         <input class="form-control" name="subject" type="text"
