--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -21,8 +21,7 @@
     <div class="address-container">
         <div class="billingAddress">
             <div class="checkout_form_container">
-                <form id="new_category_form" class="checkout_form" th:object="${category}"
-                      action="/admin-panel/category" method="post">
+                <form id="new_category_form" class="checkout_form" th:object="${category}" method="post">
 
                     <!-- Product Type -->
                     <div>
@@ -60,7 +59,8 @@
                     </div>
 
                     <!-- Button -->
-                    <input type="submit" value="Add category" class="login_button trans_200" data-rel="back">
+                    <input id="add_category_button" type="submit" value="Add category" class="login_button trans_200"
+                           data-rel="back">
 
                 </form>
             </div>
@@ -182,4 +182,32 @@
         </div>
     </div>
 </div>
+<script>
+    $('#add_category_button').click(function (event) {
+        event.preventDefault();
+        var name = $('#new_category_name').val();
+        var productType = $('#category_product_type option:selected').text().toUpperCase().split("-").join("_").split(" ").join("_");
+        var ret = {
+            name: name,
+            productType: productType
+        };
+
+        $.post("/admin-panel/category", ret, function (data) {
+            iziToast.show({
+                title: 'Success',
+                message: 'Category ' + name + ' added successfully.',
+                position: 'topRight',
+                color: 'green'
+            });
+            window.location.href = "/admin-panel#category";
+        }).fail(function (data) {
+            iziToast.show({
+                title: 'Fail',
+                message: data.responseText,
+                position: 'topRight',
+                color: 'red'
+            });
+        })
+    });
+</script>
 </html>
