Add iziToast includes to admin-panel.html

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="styles/util.css">
     <link rel="stylesheet" type="text/css" href="styles/checkout.css">
     <link rel="stylesheet" type="text/css" href="styles/profile.css">
+    <link rel="stylesheet" type="text/css" href="styles/iziToast.min.css">
 </head>
 
 <body>
@@ -412,6 +413,7 @@
 <script src="js/checkbox-dropdown.js"></script>
 <script src="js/bootstrap-multiselect.js"></script>
 <script src="js/select.js"></script>
+<script src="js/iziToast.min.js"></script>
 <script>
     $('#user').load($('.nav-link.active').attr("data-url"), function (result) {
     });
