Remove unnecessary data-rel on admin-panel category

--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -59,8 +59,7 @@
                     </div>
 
                     <!-- Button -->
-                    <input id="add_category_button" type="submit" value="Add category" class="login_button trans_200"
-                           data-rel="back">
+                    <input id="add_category_button" type="submit" value="Add category" class="login_button trans_200">
 
                 </form>
             </div>
