Toast added to Admin panel send message and User details send message

--- a/src/main/resources/templates/user-details.html
+++ b/src/main/resources/templates/user-details.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="styles/checkout.css">
     <link rel="stylesheet" type="text/css" href="styles/login.css">
     <link rel="stylesheet" type="text/css" href="styles/profile.css">
+    <link rel="stylesheet" type="text/css" href="styles/iziToast.min.css">
 
 </head>
 
@@ -406,6 +407,7 @@
 <script src="js/input-mask.js"></script>
 <script src="js/jquery.mask.js"></script>
 <script src="js/select.js"></script>
+<script src="js/iziToast.min.js"></script>
 <script>
     $('#information').load($('.nav-link.active').attr("data-url"), function (result) {
     });
