--- a/src/main/resources/static/styles/login.css
+++ b/src/main/resources/static/styles/login.css
@@ -1090,6 +1090,7 @@ section {
     -ms-transition: all 200ms ease;
     -o-transition: all 200ms ease;
     transition: all 200ms ease;
+    cursor: pointer;
 }
 
 .login_button[type=submit] {
