--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,7 +29,7 @@
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
-            <a href="index.html" class="book_your_shelf_logo">
+            <a href="/index" class="book_your_shelf_logo">
                 <img src="images/logo/book_your_shelf_logo.png" alt="">
             </a>
             <!-- Navbar Toggler -->
@@ -353,7 +353,7 @@
                         <div class="col-lg-4 footer_col">
                             <ul class="footer_list">
                                 <li>
-                                    <a href="membership.html" target="_blank">
+                                    <a href="/membership" target="_blank">
                                         <div>Terms and Conditions</div>
                                     </a>
                                 </li>
